@@ -10,13 +10,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head><body>
 
-<header>
-<nav>
-  <a href="index.html">Home</a> |&nbsp;<a href="#devel">Development</a> |&nbsp;<a href="#docs">Documentation</a>
-</nav>
-
-<h1>TeX4ht</h1>
-</header>
+<!--#include virtual="mainheader.html"-->
 
 <p>TeX4ht is a system for converting documents written in
 TeX/LaTeX/ConTeXt/etc. to HTML, various XML flavors, braille, etc.,
