@@ -1,3 +1,10 @@
+2020-07-04  Michal Hoftich  <michal.h21@gmail.com>
+
+	* development.html: working on splitting text to subpages.
+	* index.html: removed spurious lines from code listings.
+	* mainheader.html: put main menu to a standalone file that can be sourced
+	from other files.
+
 2020-07-03  Michal Hoftich  <michal.h21@gmail.com>
 
 	* index.html,
